fixed mobile layout issues

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -55,9 +55,13 @@
 }
 
 .description {
-  font-size: 1rem;
+  font-size: 0.8rem;
 }
-
+@media (min-width: 768px) {
+  .description {
+    font-size: 1rem;
+  }
+}
 /* .code {
   background: #fafafa;
   border-radius: 5px;
@@ -74,19 +78,33 @@
   flex-wrap: wrap;
   max-width: 1440px;
 }
-
 .card-display {
   background: #151515;
-border: 1px solid rgba(94, 94, 94, 0.1);
-box-shadow: inset 0px 0px 15px 6px rgba(104, 104, 104, 0.09) !important;
-border-radius: 8px;
-  margin: 1rem;
-  padding: 1.5rem;
+  border: 1px solid rgba(94, 94, 94, 0.1);
+  box-shadow: inset 0px 0px 15px 6px rgba(104, 104, 104, 0.09) !important;
+  border-radius: 8px;
+  margin: 0.5rem;
+  padding: 0.75rem 0.5rem;
   text-align: center;
   color: inherit;
   text-decoration: none;
   transition: color 0.15s ease, border-color 0.15s ease;
   min-height: 170px;
+}
+@media (min-width: 768px) {
+  .card-display {
+    /* background: #151515;
+    border: 1px solid rgba(94, 94, 94, 0.1);
+    box-shadow: inset 0px 0px 15px 6px rgba(104, 104, 104, 0.09) !important;
+    border-radius: 8px; */
+    margin: 1rem;
+    padding: 1.5rem;
+    /* text-align: center;
+    color: inherit;
+    text-decoration: none;
+    transition: color 0.15s ease, border-color 0.15s ease;
+    min-height: 170px; */
+  }
 }
 
 .card:hover,
@@ -99,7 +117,7 @@ border-radius: 8px;
 
 .card-display h3 {
   font-family: 'Futura', sans-serif;
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   font-weight: 700;
   background: linear-gradient(90deg, #66A9EC 21.25%, #3371AF 47.49%, #A11C21 81.09%);
 -webkit-background-clip: text;
@@ -121,17 +139,38 @@ padding-bottom: 15px;
   padding-top: 0.8rem;
 }
 
+@media (min-width: 768px) {
+  .card-display h3 {
+    font-size: 1.5rem;
+    border-bottom: 1px solid rgba(255,255,255,0.1);
+    padding-bottom: 15px;
+  }
+  .card-display h4 {
+    font-size: 1.2rem;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 1rem;
+    padding-top: 0.8rem;
+  }
+}
 .card p {
   margin: 0;
   font-size: 1.25rem;
   line-height: 1.5;
 }
-
 .logo {
   max-width: 100%;
-  width: 300px;
+  width: 225px;
   height: auto;
 }
+@media (min-width: 768px) {
+  .logo {
+    max-width: 100%;
+    width: 300px;
+    height: auto;
+  }
+}
+
 
 @media (max-width: 600px) {
   .grid {
@@ -176,7 +215,7 @@ padding-bottom: 15px;
   position: relative;
   color: rgba(255, 255, 255, 0.7);
 }
-.btn-staking {
+.btn-staking.tw-web3button.css-1fii1tk {
   font-family: "niveau-grotesk", sans-serif !important;
   font-weight: 400 !important;
   font-style: normal;
@@ -184,11 +223,28 @@ padding-bottom: 15px;
   padding: 20px 20px !important;
   background: linear-gradient(97.51deg, #25282B 5.12%, #242525 90.93%) !important;
   border: 1px solid #313245 !important;
-border-radius: 0px 8px 8px 0px !important;
-color:#fff !important;
-transition: color 0.15s ease, border-color 0.15s ease;
+  border-radius: 4px !important;
+  color:#fff !important;
+  transition: color 0.15s ease, border-color 0.15s ease;
+  margin: 1rem 0.5rem;
+  
 }
-.btn-staking:hover {  
+@media (min-width: 768px) {
+  .btn-staking.tw-web3button.css-1fii1tk {
+    font-family: "niveau-grotesk", sans-serif !important;
+    font-weight: 400 !important;
+    font-style: normal;
+    text-transform: uppercase !important;
+    padding: 20px 20px !important;
+    background: linear-gradient(97.51deg, #25282B 5.12%, #242525 90.93%) !important;
+    border: 1px solid #313245 !important;
+  border-radius: 0px 8px 8px 0px !important;
+  color:#fff !important;
+  transition: color 0.15s ease, border-color 0.15s ease;
+  }
+}
+
+.btn-staking.tw-web3button.css-1fii1tk:hover {  
   color:#66A9EC !important;
   background: linear-gradient(97.51deg, #25282B 5.12%, #242525 90.93%) !important;
 border: 1px solid #66A9EC !important;
